# context-leak

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  THREAT_MODEL.md  pyproject.toml
docs/: DESIGN.md
src/context_leak/: __init__.py  cli.py  report.py  scenarios.py  scoring.py  types.py
tests/: test_cli_scenario.py  test_confirm_deny.py  test_import.py  test_observatory_scenario.py  test_report.py  test_scenario_unique.py  test_scenario_uniqueness.py  test_score_crossing.py  test_scoring.py  test_smoke.py  test_theatre_scenario.py  test_validate_scenario.py  violation_test.py
